--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,21 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <nav class = "navbar navbar-inverse">
-    <div class = "container-fluid">
-      <div class = "navbar-header">
-        <button type="button" class ="navbar-toggle collapsed" data-toggle="
-        collapse" data-target = "#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle Navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href= "<%= root_path %>" > Airstroll </a>
-      </div>
-      </div>
-    </nav>
-<%= yield %>
-
+  <%= render 'home/navbar' %>
+  <div class="container">
+    <%= yield %>
+  </div>
 </body>
 </html>
