--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,9 @@
 <p> Welcome to Airstroll</p>
 
 <div class = "trip"> Where do you want to go? </div>
+<% if flash[:notice] %>
+<%= flash[:notice] %>
+<% end %>
 <%= form_tag({controller: "home", action: "search"}, method: "get", class: "search_form") do %>
  <label>Flight Origin</label>
   <select name="flight[from]" id="from_airport">
@@ -8,12 +11,30 @@
   <option value="<%= airport.id %>"><%= airport.name + ', '+ airport.city + ', '+ airport.country %></option>
   <% end %>
   </select>
-
+  <br />
   <label>Flight Destination</label>
    <select name="flight[to]" id="to_airport">
    <% @airports.each do |airport|%>
    <option value="<%= airport.id %>"><%= airport.name + ', '+ airport.city + ', '+ airport.country %></option>
    <% end %>
    </select>
-
+   <br />
+         <label>Departure date</label>
+         <input id="departure_date" name="flight[date]" type="date" class="date-picker"/>
+       <br />
+       <label>No of passenger</label>
+        <select name="flight[no_of_passenger]" id="to_airport">
+        <% (1..10).to_a.each do |i|%>
+        <option value="<%= i %>"><%= i %></option>
+        <% end %>
+        </select>
+        <br />
+        <div class="row div-pad">
+          <div class="col-sm-12">
+          <%= button_tag(type: "submit", class: "btn  orange-button") do %>
+             <span class="glyphicon glyphicon-search" aria-hidden="true"></span> Search<% end %>
+           </div>
+       </div>
 <% end %>
+<% @search.each do %>
+<div id = "search_result"
