--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -12,7 +12,7 @@
     </div>
     <div class= "collapse navbar-collapse" id = "bs-example-navbar-collapse-1">
       <ul class = "nav navbar-nav navbar-right">
-        <li> <a href="#"> All Flights</a></li>
+        <li> <a href="flight/index"> All Flights</a></li>
         </ul>
       </div>
     </div>
