--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -1,35 +1,37 @@
-<table class="table table-hover">
-  <thead>
-    <tr>
-      <th> </th>
-      <th>From</th>
-      <th>To</th>
-      <th>Airline<th>
-      <th>Departure Date</th>
-      <th>Departure Time</th>
-      <th>Price</th>
-      <th> </th>
-    </tr>
-  </thead>
+  <p> Welcome to Airstroll</p>
 
-  <% @flights.each do |flight|%>
-  <% origin = flight.from.name %>
-  <% destination = flight.to.name %>
-  <% airline = flight.airplane.airline.name %>
-  <% departure_date = flight.dept_date %>
-  <% departure_time = flight.dept_time %>
-  <% price = flight.price %>
-  <% flight_datails = [origin,destination,airline,departure_date,departure_time,price] %>
-    <tr>
-    <td>
-      <%= radio_button_tag("user_choice","#{flight.id}")%>
-    </td>
-    <% counter = 0 %>
-    <% while counter < 6 %>
-    <td><%= flight_datails[counter] %> </td>
-    <% counter += 1 %>
-    <% end %>
-    <td><%= link_to "Book", booking_path, class: "btn btn-default" %></td>
-    </tr>
+  <div class = "trip"> Where do you want to go? </div>
+  <% if flash[:notice] %>
+  <%= flash[:notice] %>
   <% end %>
-</table
+  <%= form_tag({controller: "flight", action: "search"}, method: "post", class: "search_form", remote: true) do %>
+  <label>Flight Origin</label>
+  <select name="flight[from]" id="from_airport">
+    <%= render 'flight/airport_list'%>
+  </select>
+  <br />
+  <label>Flight Destination</label>
+  <select name="flight[to]" id="to_airport">
+    <%= render 'flight/airport_list'%>
+  </select>
+  <br />
+  <label>Departure date</label>
+  <input id="departure_date" name="flight[date]" type="date" class="date-picker"/>
+  <br />
+  <label>No of passenger</label>
+  <select name="flight[no_of_passenger]" id="to_airport">
+    <% (1..10).to_a.each do |i|%>
+    <option value="<%= i %>"><%= i %></option>
+    <% end %>
+  </select>
+  <br />
+  <div class="row div-pad">
+    <div class="col-sm-12">
+      <%= button_tag(type: "submit", class: "btn  orange-button") do %>
+      <span class="glyphicon glyphicon-search" aria-hidden="true"></span> Search<% end %>
+    </div>
+  </div>
+  <% end %>
+  <div id = "flight-result">
+
+  </div>
