--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <%= render 'home/navbar' %>
+  <%= render 'flight/navbar' %>
   <div class="container">
     <%= yield %>
   </div>
