feat(view): add new search features
add search without departure date

improve search result to only return flights that the departure dates are
greater than Time.now

--- a/app/views/flight/_search_result.html.erb
+++ b/app/views/flight/_search_result.html.erb
@@ -1,24 +1,34 @@
+
 <% if !@search_result.empty? %>
 <table class="table table-hover">
   <thead>
     <tr>
+      <th>#</th>
       <th>From</th>
       <th>To</th>
-      <th>Departure Date</th>
+      <th>Airline</th>
+      <th>Departure Date and Time</th>
       <th>Price</th>
     </tr>
   </thead>
-  <tbody>
-    <% @search_result.each do |result| %>
-    <tr>
-      <td><%= result.from.name%> <%= result.from.city%> <%= result.from.country%></td>
-      <td><%= result.to.name %> <%= result.from.city%> <%= result.from.country%></td>
-      <td><%= result.dept_date %> Departure Time <%= result.dept_time%></td>
-      <td><%= result.price %></td>
-      <td><%= link_to "Book", booking_path, class: "btn btn-default" %></td>
 
-    </tr>
-    <% end %>
+  <tbody>
+
+      <% @search_result.each do |result| %>
+        <tr>
+          <% airline = result.airplane.airline.name %>
+
+          <td><%= radio_button_tag("book_choice","#{result.id}")%></td>
+          <td><%= result.from.name%> <%= result.from.city%> <%= result.from.country%></td>
+          <td><%= result.to.name %> <%= result.from.city%> <%= result.from.country%></td>
+          <td><%= airline %> </td>
+          <td><%= result.dept_date %> Departure Time <%= result.dept_time%></td>
+          <td><%= result.price %></td>
+          <%= hidden_field_tag(:id, result.id) %>
+          <% booking_details = "?id=#{result.id}&passenger= #{params[:flight][:no_of_passenger]}" %>
+          <td><%= link_to "Book", booking_path + booking_details, class: "btn btn-default" %></td>
+        </tr>
+      <% end %>
   </tbody>
 </table>
 <% else %>
