--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,13 +1,34 @@
 
 <div class="jumbotron">
   <div class="container">
-    <h1><%= @flight.airplane.airline.name%></h1>
-    <p><strong>Departure Airport: </strong><%= @flight.from.name%></p>
-    <p><strong>Arrival Airport: </strong><%= @flight.to.name%></p>
-    <p><strong>Airplane Name: </strong><%= @flight.airplane.name%></p>
-    <p><strong>Number of passengers: </strong><%= params[:passenger] %></p>
-    <p><strong>Flight Code: </strong><%= @flight.flight_code%></p>
-    <p><strong>Seats Available: </strong><%= @flight.airplane.seats%></p>
-    <p><a class="btn btn-primary btn-lg" href="#" role="button">Reserve Seat</a></p>
+    <div class="row">
+      <div class="col-lg-6">
+        <h1><%= @flight.airplane.airline.name%></h1>
+        <p><strong>Departure Airport: </strong><%= @flight.from.name%></p>
+        <p><strong>Arrival Airport: </strong><%= @flight.to.name%></p>
+        <p><strong>Airplane Name: </strong><%= @flight.airplane.name%></p>
+        <p><strong>Number of passengers: </strong><%= params[:passenger] %></p>
+        <p><strong>Flight Code: </strong><%= @flight.flight_code%></p>
+        <p><strong>Flight Code: </strong><%= @flight.flight_code%></p>
+        <% total_price = @flight.price.to_i * params[:passenger].to_i %>
+        <p><strong>Total cost: </strong><%= total_price %></p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Reserve Seat</a></p>
+      </div>
+      <div class="col-lg-6">
+        <%= form_for @booking, url: {action: "create"} do |f| %>
+          <%= f.fields_for :passengers do | passenger | %>
+          <h2> Passenger Details </h2>
+          <%= passenger.label :name, "Name" %>
+          <%= f.text_field :name %>
+          <%= passenger.label :email, "Email" %>
+          <%= f.text_field :email %>
+          <% end %>
+          <%= f.hidden_field :total_cost, { value: "#{total_price}" } %>
+          <%= f.hidden_field :flight_id, { value: "#{params[:id]}" } %>
+          <%= f.hidden_field :no_of_passengers, { value: "#{params[:passenger]}" %>
+          <%= submit_tag( "Book Flight", {class: "btn btn-default"}) %>
+        <% end %>
+      </div>
+    </div>
   </div>
 </div>
