feat(booking): add the confirmation page

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -9,8 +9,8 @@
         <p><strong>Airplane Name: </strong><%= @flight.airplane.name%></p>
         <p><strong>Flight Code: </strong><%= @flight.flight_code%></p>
         <% cost = @flight.price %>
-        <p class="pass"><strong>Number of Passenger: </strong><%=params[:passenger]%></p>
-        <p><strong>Price:  </strong><%= cost %></p>
+         <p class="pass"><strong>Number of Passenger:</strong><%=params[:passenger]%></p>
+        <p><strong>Price:</strong> <%= cost %></p>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">Reserve Seat</a></p>
       </div>
       <div class="col-lg-6">
@@ -19,12 +19,12 @@
         <%= form_for @booking, url: {action: "create"} do |f| %>
           <%= f.hidden_field :flight_id, { value: "#{params[:id]}" } %>
           <%= f.hidden_field :confirmation_code, { value: "#{rand(1000+(params[:id].to_i))}" } %>
-          <%= f.hidden_field :no_of_passenger, { value: "#{params[:passenger]}"} %>
+          <%= f.hidden_field :no_of_passenger, { value: "#{params[:passenger]}",class: "no_of_pass"} %>
           <%= f.fields_for :passengers do | passenger | %>
           <%= render 'passenger_fields', f: passenger %>
           <% end %>
           <div class="links">
-            <%= link_to_add_association content_tag(:span, 'Add Passenger', class: "add_passenger"), f, :passengers, :class => 'btn btn-primary add' %>
+            <%= link_to_add_association content_tag(:span, 'Add Passenger', class: "add_passenger"), f, :passengers, :class => 'btn btn-primary add', onclick: "passenger_calc('add')" %>
             <%= submit_tag( "Book Flight", {class: "btn btn-default"}) %>
           </div>
         <% end %>
