chore(mailer): update gem file with letter_opener and set development enviroment

--- a/app/views/passenger_mailer/confirmation.html.erb
+++ b/app/views/passenger_mailer/confirmation.html.erb
@@ -1,6 +1,6 @@
 Good day <%=@passenger.name %>,
 
-<p class="body-text">You have successful made a booking with Booking number <%= @booking.confirmation_code %> with  </p>
+<p class="body-text">You have successful made a booking with Booking number <%= @booking.confirmation_code %> with Airstroll </p>
 
 <p><b>Here are your booking details</b></p>
 
