fix(booking): fix total cost bug

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -9,7 +9,7 @@
         <p><strong>Airplane Name: </strong><%= @flight.airplane.name%></p>
         <p><strong>Flight Code: </strong><%= @flight.flight_code%></p>
         <% cost = @flight.price %>
-         <p class="pass"><strong>Number of Passenger:</strong><%=params[:passenger]%></p>
+         <p class="pass"><strong>Number of Passenger:</strong><%= @number_of_passengers%></p>
         <p><strong>Price:</strong> <%= cost %></p>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">Reserve Seat</a></p>
       </div>
@@ -19,7 +19,7 @@
         <%= form_for @booking, url: {action: "create"} do |f| %>
           <%= f.hidden_field :flight_id, { value: "#{params[:id]}" } %>
           <%= f.hidden_field :confirmation_code, { value: "#{rand(1000+(params[:id].to_i))}" } %>
-          <%= f.hidden_field :no_of_passenger, { value: "#{params[:passenger]}",class: "no_of_pass"} %>
+          <%= f.hidden_field :no_of_passenger, { value: "#{@number_of_passengers}",class: "no_of_pass"} %>
           <%= f.fields_for :passengers do | passenger | %>
           <%= render 'passenger_fields', f: passenger %>
           <% end %>
