--- a/app/views/flight/_navbar.html.erb
+++ b/app/views/flight/_navbar.html.erb
@@ -11,9 +11,31 @@
       <a class="navbar-brand" href= "<%= root_path %>" > Airstroll </a>
     </div>
     <div class= "collapse navbar-collapse" id = "bs-example-navbar-collapse-1">
-      <ul class = "nav navbar-nav navbar-right">
-        <li> <a href="flight/all"> All Flights</a></li>
+        <ul class = "nav navbar-nav navbar-right">
+
+            <li> <a href="flight/all"> All Flights</a></li>
+            <% if !current_user %>
+            <li><a class="modal-trigger" href="#modal1">Login</a></li>
+          </ul>
+        <% else %>
+        <ul id="dropdown1" class="dropdown-content">
+          <li><%= link_to "Past booking", # %></li>
+          <li><%= link_to "Manage booking", # %></li>
+          <li><%= link_to "Logout", # %></li>
         </ul>
+        <% end %>
       </div>
     </div>
   </nav>
+
+  <div id="modal1" class="modal">
+    <div class="modal-content row">
+      <p>&nbsp;</p>
+      <div class="col l2 offset-l1 s12">
+        <a href="/auth/google_oauth2" class="waves-effect waves-light btn red darken-2">Google</a>
+      </div>
+      <div class="col l2 offset-l3 s12">
+        <a href="/auth/facebook" class="waves-effect waves-light btn  blue darken-4">Facebook</a>
+      </div>
+    </div>
+  </div>
