--- a/app/views/flight/_navbar.html.erb
+++ b/app/views/flight/_navbar.html.erb
@@ -18,12 +18,14 @@
              <li><a href="#" data-toggle="modal" data-target= "#loginmodal" role="dialog">Login</a></li>
           </ul>
         <% else %>
-         <%= link_to "#{session[:name]}", "#", { class: "dropdown-button", :data => {:activates => "dropdown1"} } %>
-        <ul id="dropdown1" class="dropdown-content">
+        <li>
+         <%= link_to raw("<i class='fa fa-caret-down right'></i> #{session[:name]}"), "#", { class: "dropdown-button", :data => {:activates => "dropdown1",:toggle => "dropdown"} } %>
+        <ul id="dropdown1" class="dropdown-menu">
           <li><%= link_to "Past booking", user_profile_path %></li>
           <li><%= link_to "Manage booking", "#" %></li>
           <li><%= link_to "Logout", "#" %></li>
         </ul>
+      </li>
         <% end %>
       </div>
     </div>
