--- a/app/views/passenger_mailer/confirmation.html.erb
+++ b/app/views/passenger_mailer/confirmation.html.erb
@@ -1,4 +1,4 @@
-Good day <%=@passenger.name %>,
+Good day <%=@passenger %>,
 
 <p class="body-text">You have successful made a booking with Booking number <%= @booking.confirmation_code %> with Airstroll </p>
 
