--- a/app/views/flight/_navbar.html.erb
+++ b/app/views/flight/_navbar.html.erb
@@ -23,7 +23,7 @@
         <ul id="dropdown1" class="dropdown-menu">
           <li><%= link_to "Past booking", user_profile_path %></li>
           <li><%= link_to "Manage booking", "#" %></li>
-          <li><%= link_to "Logout", "#" %></li>
+          <li><%= link_to "Logout", logout_path %></li>
         </ul>
       </li>
         <% end %>
