--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -19,7 +19,7 @@
         <%= form_for @booking, url: {action: "create"} do |f| %>
           <%= f.hidden_field :flight_id, { value: "#{params[:id]}" } %>
           <%= f.hidden_field :confirmation_code, { value: "#{rand(1000+(params[:id].to_i))}" } %>
-          <%= f.hidden_field :no_of_passenger, { value: "#{params[:passenger]}",class: "no_of_pass"} %>
+          <%= f.hidden_field :no_of_passenger, { value: "#{@number_of_passengers}",class: "no_of_pass"} %>
           <%= f.hidden_field :user_id, {value: "#{session[:user_id]}"} %>
           <%= f.fields_for :passengers do | passenger | %>
           <%= render 'passenger_fields', f: passenger %>
