--- a/app/views/flight/_airport_list.html.erb
+++ b/app/views/flight/_airport_list.html.erb
@@ -1,4 +1,4 @@
 
  <% @airports.each do |airport|%>
- <option value="<%= airport.id %>"><%= airport.name + ', '+ airport.city + ', '+ airport.country %></option>
-<% end %> 
+ <option value="<%= airport.id %>"><%= airport.name + ', '+ airport.city %></option>
+<% end %>
