--- a/app/views/flight/_search_result.html.erb
+++ b/app/views/flight/_search_result.html.erb
@@ -31,5 +31,5 @@
   </tbody>
 </table>
 <% else %>
-<div> There is no Flight that match that your search. You can search again or select all Flights</div>
+<div class="text-center"> <h4> There is no Flight that match that your search. You can search again or select all Flights</h4></div>
 <% end %>
