--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,20 +1,31 @@
 <% if @bookings.empty? %>
-<h3> You have no Bookings yet </h3>
-<p> Click here to book a flight <%= link_to root_path %> </p>
+<h3 class="text-center"> You have no Bookings yet </h3>
+<p class="text-center">> Click here to book a flight <%= link_to root_path %> </p>
 <% else %>
+ <table class="table table-hover">
+   <thead>
+     <tr>
+       <th>Booking Code</th>
+       <th>Departure Airport</th>
+       <th>Destination Airport</th>
+       <th>Airline</th>
+       <th>Departure Date and Time</th>
+       <th>Price</th>
+     </tr>
+   </thead>
 
-<table>
-<thead>
-  <th> confirmation code </th>
-  <th> Departure airport </th>
-  <th>Destination Airport </th>
-</thead>
-<% @bookings.each do |booking| %>
-<tbody>
-  <tr> <%= booking.confirmation_code  %> </tr>
-  <tr> <%= booking.flight.from.name %> </tr>
-  <tr> <%= booking.flight.to.name %> </tr>
-</tbody>
-<% end %>
-</table>
+   <tbody>
+     <% @bookings.each do |booking| %>
+     <tr>
+       <td> <%= booking.confirmation_code  %> </td>
+       <td> <%= booking.flight.from.name %> </td>
+       <td> <%= booking.flight.to.name %> </td>
+       <td> <%= booking.flight.airplane.airline.name %> </td>
+       <td> <%= booking.flight.dept_date %> <%= booking.flight.dept_date %> </td>
+       <% total_cost = booking.flight.price.to_i * booking.passengers.count.to_i %>
+       <td> <%= total_cost %> </td>
+     </tr>
+     <% end %>
+   </tbody>
+ </table>
  <% end %>
