--- a/app/views/flight/_navbar.html.erb
+++ b/app/views/flight/_navbar.html.erb
@@ -20,7 +20,7 @@
         <% else %>
         <li> <%=image_tag(session[:image], class: "img-circle im")  %></li>
         <li>
-         <%= link_to raw("<i class='fa fa-caret-down right'></i> #{session[:name]}"), "#", { class: "dropdown-button", :data => {:activates => "dropdown1",:toggle => "dropdown"} } %>
+         <%= link_to raw("<i class='fa fa-caret-down right'></i> #{current_user.name}"), "#", { class: "dropdown-button", :data => {:activates => "dropdown1",:toggle => "dropdown"} } %>
         <ul id="dropdown1" class="dropdown-menu">
           <li><%= link_to "Past booking", user_profile_path %></li>
           <li><%= link_to "Manage booking", "#" %></li>
