chore(booking form): move files to partials

--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -11,14 +11,14 @@
         <div class="form-group">
           <select name="flight[from]" id="from_airport" class="form-control">
             <option>Flight Origin</option>
-            <%= render 'flight/airport_list'%>
+            <%= render 'partials/airport_list'%>
           </select>
         </div>
 
         <div class="form-group">
         <select name="flight[to]" id="to_airport" class="form-control">
           <option>Flight Destination</option>
-          <%= render 'flight/airport_list'%>
+          <%= render 'partials/airport_list'%>
         </select>
       </div>
 
