--- a/app/views/partials/_reservation_result.html.erb
+++ b/app/views/partials/_reservation_result.html.erb
@@ -4,4 +4,5 @@
   <%= @reservation.confirmation_code %>
   <%= @reservation.flight.from.name %>
   <%= @reservation.flight.to.name %>
+  <%= link_to "Edit ", edit_booking_path(@reservation), class: "btn btn-default" %>
   <% end %>
