--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -15,20 +15,8 @@
       </div>
       <div class="col-lg-6">
         <h2> Passenger Details </h2>
-
-        <%= form_for @booking, url: {action: "create"} do |f| %>
-          <%= f.hidden_field :flight_id, { value: "#{params[:id]}" } %>
-          <%= f.hidden_field :confirmation_code, { value: "#{rand(1000+(params[:id].to_i))}" } %>
-          <%= f.hidden_field :no_of_passenger, { value: "#{@number_of_passengers}",class: "no_of_pass"} %>
-          <%= f.hidden_field :user_id, {value: "#{session[:user_id]}"} %>
-          <%= f.fields_for :passengers do | passenger | %>
-          <%= render 'passenger_fields', f: passenger %>
-          <% end %>
-          <div class="links">
-            <%= link_to_add_association content_tag(:span, 'Add Passenger', class: "add_passenger"), f, :passengers, :class => 'btn btn-primary add', onclick: "passenger_calc('add')" %>
-            <%= submit_tag( "Book Flight", {class: "btn btn-default"}) %>
-          </div>
-        <% end %>
+        <%= render 'partials/booking_form' %>
+        
       </div>
     </div>
   </div>
