feat(edit page): add edit page

--- a/app/views/bookings/find_reservation.js.erb
+++ b/app/views/bookings/find_reservation.js.erb
@@ -1,1 +1,1 @@
-$("#reserv-result").empty().append("<%= j render('reservation_result') %>");
+$("#reserv-result").empty().append("<%= j render('partials/reservation_result') %>");
