fix(booking): redirect back to booking page when user enters no passenger detail

--- a/app/views/flight/search.js.erb
+++ b/app/views/flight/search.js.erb
@@ -1,1 +1,1 @@
-$("#flight-result").empty().append("<%= j render('search_result') %>");
+$("#flight-result").empty().append("<%= j render('partials/search_result') %>");
