--- a/app/views/partials/_search_result.html.erb
+++ b/app/views/partials/_search_result.html.erb
@@ -25,7 +25,9 @@
           <td><%= flight.dept_date %> Departure Time <%= flight.dept_time%></td>
           <td><%= flight.price %></td>
           <% booking_details = {:id =>flight.id,:passenger => params[:flight][:no_of_passenger]} %>
-          <td><%= link_to "Select flight", new_booking_path(booking_details), class: "btn btn-default" %></td>
+          <!-- <td><%= link_to "Book", new_booking_path(booking_details), class: "btn btn-info" %></td> -->
+          <td><a class="btn btn-info" href="<%= new_booking_path(booking_details) %>"><span class="glyphicon glyphicon-plane" aria-hidden="true"></span> Book</a></td>
+
         </tr>
         <% end %>
       </tbody>
