--- a/app/views/shared/_nav_bar.html.erb
+++ b/app/views/shared/_nav_bar.html.erb
@@ -2,19 +2,19 @@
   <div id="navigation" class="navbar navbar-default navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#"><b>Airstroll</b></a>
+        </button> -->
+        <a class="navbar-brand" href="<%= root_path%>"><b>Airstroll</b></a>
       </div>
       <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav">
+        <!-- <ul class="nav navbar-nav">
           <li class="active"><a href="<%= root_path%>" class="smothscroll">Home</a></li>
-          <li><a href="<%= flights_path %>" class="smothscroll">All Flights</a></li>
-          </ul>
+          </ul> -->
           <ul class = "nav navbar-nav navbar-right">
+            <li><a href="<%= flights_path %>" class="smothscroll">All Flights</a></li>
             <% if current_user.nil? %>
              <li><a href="#" data-toggle="modal" data-target= "#loginmodal" role="dialog">Login</a></li>
              <% else %>
