--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -87,25 +87,19 @@
     </div> <!--/ .container -->
 </div><!--/ #headerwrap -->
 
+<div id = "flight-result">
 
-<section id="desc" name="desc"></section>
-	<!-- INTRO WRAP -->
-	<div id="intro">
+</div>
+<!-- <section id="desc" name="desc"></section>
+	 <div id="intro">
 		<div class="container">
 			<div class="row centered">
 				<h1>Search Results</h1>
 				<br>
 				<br>
 
-        <div id = "flight-result">
-
-        </div>
 
 
-</div> <!--/ .container -->
- </div><!--/ #introwrap -->
 
-
-  <% if flash[:notice] %>
-  <%= flash[:notice] %>
-  <% end %>
+</div>
+ </div> -->
