chore(home page): rewrite the page

--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -87,19 +87,20 @@
     </div> <!--/ .container -->
 </div><!--/ #headerwrap -->
 
-<div id = "flight-result">
 
+
+  <section id="desc" name="desc"></section>
+  <div id="intro">
+    <div class="container">
+      <div class="row centered">
+        <h1>Search Results</h1>
+        <br>
+        <br>
+        <div id = "flight-result">
+
+
+
+
+      </div>
+    </div>
 </div>
-<!-- <section id="desc" name="desc"></section>
-	 <div id="intro">
-		<div class="container">
-			<div class="row centered">
-				<h1>Search Results</h1>
-				<br>
-				<br>
-
-
-
-
-</div>
- </div> -->
