--- a/app/views/partials/_search_result.html.erb
+++ b/app/views/partials/_search_result.html.erb
@@ -1,3 +1,4 @@
+
   <div class="container">
     <% if !@search_result.empty? %>
     <table class="table table-hover">
@@ -34,5 +35,7 @@
     </table>
   </div>
   <% else %>
-  <div class="text-center"> <h4> There is no Flight that match that your search. You can search again or select all Flights</h4></div>
+  <div class="text-center">
+    There is no result that match your search. search again or see all flights
+  </div>
   <% end %>
