--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -11,11 +11,9 @@
         <div class="col-lg-2">
           <h5>Easy Search</h5>
           <p>Click the search button to begin your adventure.</p>
-          <img class="hidden-xs hidden-sm hidden-md" src="assets/images/arrow1.png">
+          <img class="hidden-xs hidden-sm hidden-md" src="images/arrow1.png">
         </div>
         <div class="col-lg-8">
-<!-- 	    			<img class="img-responsive" src="assets/img/app-bg.png" alt="">
--->
 
         <%= form_tag({controller: "flight", action: "search"}, method: "post", role: "form", remote: true) do %>
 
@@ -79,7 +77,7 @@
         </div>
         <div class="col-lg-2">
           <br>
-          <img class="hidden-xs hidden-sm hidden-md" src="assets/images/arrow2.png">
+          <img class="hidden-xs hidden-sm hidden-md" src="images/arrow2.png">
           <h5>Filtered Search</h5>
           <p>Feel free to narrow down your search.</p>
         </div>
@@ -88,19 +86,8 @@
 </div><!--/ #headerwrap -->
 
 
-
-  <section id="desc" name="desc"></section>
-  <div id="intro">
-    <div class="container">
-      <div class="row centered">
-        <h1>Search Results</h1>
-        <br>
-        <br>
-        <div id = "flight-result">
+<div id="flight-result"></div>
 
 
 
-
-      </div>
-    </div>
-</div>
+  
