--- a/app/views/partials/_search_result.html.erb
+++ b/app/views/partials/_search_result.html.erb
@@ -1,41 +1,52 @@
 
-  <div class="container">
-    <% if !@search_result.empty? %>
-    <table class="table table-hover">
-      <thead>
-        <tr>
-          <th>#</th>
-          <th>From</th>
-          <th>To</th>
-          <th>Airline</th>
-          <th>Departure Date and Time</th>
-          <th>Price</th>
-        </tr>
-      </thead>
+  <section id="desc" name="desc"></section>
+  <div id="intro">
+    <div class="container">
+      <div class="row centered">
+        <h1>Search Results</h1>
+        <div class="container">
+          <% if !@search_result.empty? %>
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th>#</th>
+                <th>From</th>
+                <th>To</th>
+                <th>Airline</th>
+                <th>Departure Date and Time</th>
+                <th>Price</th>
+              </tr>
+            </thead>
 
-      <tbody>
+            <tbody>
 
-        <% @search_result.each do |flight| %>
-        <tr>
-          <% airline = flight.airplane.airline.name %>
+              <% @search_result.each do |flight| %>
+              <tr>
+                <% airline = flight.airplane.airline.name %>
 
-          <td><%= radio_button_tag("book_choice","#{flight.id}")%></td>
-          <td><%= flight.from.name%> <%= flight.from.city%> <%= flight.from.country%></td>
-          <td><%= flight.to.name %> <%=flight.to.city%> <%= flight.to.country%></td>
-          <td><%= airline %> </td>
-          <td><%= flight.dept_date %> Departure Time <%= flight.dept_time%></td>
-          <td><%= flight.price %></td>
-          <% booking_details = {:id =>flight.id,:passenger => params[:flight][:no_of_passenger]} %>
-          <!-- <td><%= link_to "Book", new_booking_path(booking_details), class: "btn btn-info" %></td> -->
-          <td><a class="btn btn-info" href="<%= new_booking_path(booking_details) %>"><span class="glyphicon glyphicon-plane" aria-hidden="true"></span> Book</a></td>
+                <td><%= radio_button_tag("book_choice","#{flight.id}")%></td>
+                <td><%= flight.from.name%> <%= flight.from.city%> <%= flight.from.country%></td>
+                <td><%= flight.to.name %> <%=flight.to.city%> <%= flight.to.country%></td>
+                <td><%= airline %> </td>
+                <td><%= flight.dept_date %> Departure Time <%= flight.dept_time%></td>
+                <td><%= flight.price %></td>
+                <% booking_details = {:id =>flight.id,:passenger => params[:flight][:no_of_passenger]} %>
+                <!-- <td><%= link_to "Book", new_booking_path(booking_details), class: "btn btn-info" %></td> -->
+                <td><a class="btn btn-info" href="<%= new_booking_path(booking_details) %>"><span class="glyphicon glyphicon-plane" aria-hidden="true"></span> Book</a></td>
 
-        </tr>
+              </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+        <% else %>
+        <div class="text-center">
+          There is no result that match your search. search again or see all flights
+        </div>
         <% end %>
-      </tbody>
-    </table>
-  </div>
-  <% else %>
-  <div class="text-center">
-    There is no result that match your search. search again or see all flights
-  </div>
-  <% end %>
+
+
+
+    </div>
+</div>
+</div>
