--- a/app/views/partials/_passenger_fields.html.erb
+++ b/app/views/partials/_passenger_fields.html.erb
@@ -1,5 +1,5 @@
 <div class="nested-fields form-inline" id ="nested-fields">
 <%= f.text_field :name, :class => "form-control", id: "name", placeholder: "Passenger Name", required: true %>
 <%= f.email_field :email, :class => "form-control", id: "email", placeholder: "Passenger Email",required: true  %>
-<%= link_to_remove_association "Remove passenger", f, class: "btn btn-danger",:confirm => "Are you sure?",onclick: "passenger_calc('subtract')" %>
+<%= link_to_remove_association "Remove passenger", f, class: "btn btn-danger",onclick: "passenger_calc('subtract')" %>
 </div>
